objects/cc_oo_ErrorLog__c.object
<CustomObject>
    <description>This is the custom object for logging errors with specified parameters.</description>
    <fields>
        <fullName>cc_oo_ApexClass__c</fullName>
        <label>ApexClass</label>
        <length>252</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cc_oo_Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cc_oo_ErrorID__c</fullName>
        <displayFormat>A-{0000}</displayFormat>
        <externalId>true</externalId>
        <label>Error ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>cc_oo_LogType__c</fullName>
        <label>Log Type</label>
        <length>252</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cc_oo_MethodName__c</fullName>
        <label>MethodName</label>
        <length>252</length>
        <type>Text</type>
    </fields>
    <label>CC OO Error Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>cc_oo_ApexClass__c</columns>
        <columns>cc_oo_Description__c</columns>
        <columns>cc_oo_MethodName__c</columns>
        <columns>cc_oo_LogType__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CC Error Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CC OO Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>